# bijective-numeration

./: CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
include/: BijectiveNumeration.h  BijectiveNumerationTest.h  DigitSet.h  uint128.h
src/: main.cpp
